--- a/menu/css/menu.css
+++ b/menu/css/menu.css
@@ -3,11 +3,10 @@
     border: 1px solid black;
     /* border-radius: 10px; */
     text-align: center;
-    margin-right: 100px;
-    margin-left: 100px;
     overflow: hidden;
     background-color: rgb(0, 0, 0);
     padding: 0;
+    margin: -10px;
     
 }
 .menu li{
