--- a/14-7-zoo/css/style.css
+++ b/14-7-zoo/css/style.css
@@ -9,6 +9,19 @@ body{
 .logo img{
     width: 20%;
 }
+.headerSup ul{
+    background-color: #cfa455;
+    margin: 0px;
+}
+.headerSup li{
+    display: inline-block;
+    font-size: 0.8em;
+    padding: 5px;
+    border-left: 1px solid #ffffff;
+}
+.headerSup .datos{
+    margin: 14px;
+}
 .header{
     background: rgb(55,157,19);
     background: linear-gradient(180deg, rgba(55,157,19,1) 0%, rgba(114,218,76,1) 64%, rgba(208,235,198,1) 100%);
@@ -31,15 +44,6 @@ body{
    
     
 }
-.headerSup ul{
-    background-color: #cfa455;
-    margin: 0px;
-}
-.headerSup li{
-    display: inline-block;
-    font-size: 0.8em;
-    padding: 5px;
-}
 .imagen img{
     width: 100%;
     transform: scaleX(-1);
@@ -52,7 +56,7 @@ body{
 
 }
 .imagen{
-    /* position: relative; */
+    position: relative;
     display: inline-block;
     text-align: center;
     top: 0px;
@@ -113,6 +117,103 @@ body{
   background-color: #c85000;
   box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
   transform: translateY(0);
+}
+
+
+.carrusel{
+    width: 20%;
+    margin: 0 39%;
+    
+    
+    
+}
+/*El carrusel*/
+
+.container img {
+  vertical-align: middle;
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 16.66%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
 }
 
 /*Responsive*/
